# desk-manager

./: .gitignore  CLAUDE.md  README.md  electron-builder.json  index.html  package.json  refactor.md  vite.config.ts
electron/: main.ts  preload.ts
src/: App.css  App.tsx  electron.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auto_hide.rs  lib.rs  protocol.rs
src-tauri/src/commands/: app_data.rs  file_ops.rs  mod.rs  window.rs
src/components/: CardContainer.css  CardContainer.tsx  FileCard.css  FileCard.tsx  FileManager.css  FileManager.tsx  ResizeFrame.css  ResizeFrame.tsx  SettingsPanel.css  SettingsPanel.tsx  TodoForm.css  TodoForm.tsx  TodoItem.css  TodoItem.tsx  TodoList.css  TodoList.tsx  TopBar.css  TopBar.tsx
